--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)document.location=h+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/index.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/home-favicon.ico?crc=103988463"/>
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://iamlifechurch.org/phone/index.html"/>
+  <link rel="shortcut icon" href="images/home-favicon.ico?crc=3856070086"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204246220"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=462822818" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4195712321" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425" id="nomq_pagesheet"/>
@@ -32,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/rpGRTQvKNT9PaeX0Ipmvx7X1gHC72fRrOTqb6heLsCIfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMSKP7rIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/0b7LK8jsCYXUGMiNq6Me-iBf4enbCt_bDU7imZeYU8IfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMZxbn5IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -63,7 +69,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div id="u5765"><!-- group -->
        <div class="clearfix" id="u5765_align_to_page">
         <div class="clip_frame grpelem" id="u4112"><!-- image -->
-         <img class="block" id="u4112_img" src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50"/>
+         <img class="block" id="u4112_img" src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
         </div>
         <div class="clearfix grpelem" id="u4114-4"><!-- content -->
          <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
@@ -101,7 +107,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clip_frame grpelem" id="u6237" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u6237_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u6239" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u6239_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
-     <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u6241" href="index.html"><!-- image --><img class="block" id="u6241_img" src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50"/></a>
+     <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u6241" href="index.html"><!-- image --><img class="block" id="u6241_img" src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
      <a class="nonblock nontext clearfix grpelem" id="u6243-4" href="about-us.html"><!-- content --><p id="u6243-2"><span class="Menu-Buttons" id="u6243">ABOUT US</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6244-4" href="testimony.html"><!-- content --><p id="u6244-2"><span class="Menu-Buttons" id="u6244">TESTIMONY</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6245-4" href="events.html"><!-- content --><p id="u6245-2"><span class="Menu-Buttons" id="u6245">EVENTS</span></p></a>
