--- a/study.html
+++ b/study.html
@@ -9,22 +9,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)document.location=h+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/study.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "study.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "study.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://iamlifechurch.org/phone/study.html"/>
   <title>Study</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204246220"/>
-  <link rel="stylesheet" type="text/css" href="css/study.css?crc=3971061619" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=185841524"/>
+  <link rel="stylesheet" type="text/css" href="css/study.css?crc=297660340" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_study.css?crc=147349007" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_study.css?crc=3791932120" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -32,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/K2fIiWQHvbKx3mOZGBdJO4jy8JdYtvbm96tc3PXtxiwfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbMSpP7rIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/LayxsWletfNA5EPk1Ik49TJzgx_g9QEoQjoDX-uGkRGfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbMpxbn5IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -60,7 +66,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div id="u5765"><!-- group -->
         <div class="clearfix" id="u5765_align_to_page">
          <div class="clip_frame grpelem" id="u4112"><!-- image -->
-          <img class="block temp_no_img_src" id="u4112_img" data-orig-src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50" src="images/blank.gif?crc=4208392903"/>
+          <img class="block temp_no_img_src" id="u4112_img" data-orig-src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51" src="images/blank.gif?crc=4208392903"/>
          </div>
          <div class="clearfix grpelem shared_content" id="u4114-4" data-content-guid="u4114-4_content"><!-- content -->
           <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
@@ -138,11 +144,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <a class="nonblock nontext clip_frame grpelem" id="u9150" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block temp_no_img_src" id="u9150_img" data-orig-src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31" src="images/blank.gif?crc=4208392903"/></a>
       <a class="nonblock nontext clip_frame grpelem" id="u9152" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block temp_no_img_src" id="u9152_img" data-orig-src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30" src="images/blank.gif?crc=4208392903"/></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u9154" href="index.html"><!-- image --><img class="block temp_no_img_src" id="u9154_img" data-orig-src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext clip_frame grpelem" id="u9154" href="index.html"><!-- image --><img class="block temp_no_img_src" id="u9154_img" data-orig-src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51" src="images/blank.gif?crc=4208392903"/></a>
       <a class="nonblock nontext clearfix grpelem shared_content" id="u9156-4" href="about-us.html" data-content-guid="u9156-4_content"><!-- content --><p id="u9156-2"><span class="Menu-Buttons" id="u9156">ABOUT US</span></p></a>
       <a class="nonblock nontext clearfix grpelem shared_content" id="u9157-4" href="testimony.html" data-content-guid="u9157-4_content"><!-- content --><p id="u9157-2"><span class="Menu-Buttons" id="u9157">TESTIMONY</span></p></a>
       <a class="nonblock nontext clearfix grpelem shared_content" id="u9158-4" href="events.html" data-content-guid="u9158-4_content"><!-- content --><p id="u9158-2"><span class="Menu-Buttons" id="u9158">EVENTS</span></p></a>
-      <a class="nonblock nontext clearfix grpelem shared_content" id="u9159-4" href="prayer.html" data-content-guid="u9159-4_content"><!-- content --><p id="u9159-2"><span class="Menu-Buttons" id="u9159">CONTACT</span></p></a>
+      <a class="nonblock nontext clearfix grpelem shared_content" id="u9159-4" href="contact-us.html" data-content-guid="u9159-4_content"><!-- content --><p id="u9159-2"><span class="Menu-Buttons" id="u9159">CONTACT</span></p></a>
       <div class="clearfix grpelem shared_content" id="u4434-4" data-content-guid="u4434-4_content"><!-- content -->
        <p>Online Bible Study Resources</p>
       </div>
@@ -198,7 +204,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.facebook.com/iamlifechurchinternational" data-orig-id="u4108"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" width="8" height="8" data-orig-id="u4108_img" src="images/blank.gif?crc=4208392903"/></a>
          <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?" data-orig-id="u4110"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/youtube.png?crc=394888956" alt="" width="8" height="8" data-orig-id="u4110_img" src="images/blank.gif?crc=4208392903"/></a>
          <div class="clip_frame grpelem temp_no_id" data-orig-id="u4112"><!-- image -->
-          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=3784297162" alt="" width="54" height="14" data-orig-id="u4112_img" src="images/blank.gif?crc=4208392903"/>
+          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=3999926010" alt="" width="54" height="14" data-orig-id="u4112_img" src="images/blank.gif?crc=4208392903"/>
          </div>
          <span class="clearfix grpelem placeholder" data-placeholder-for="u4114-4_content"><!-- placeholder node --></span>
          <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4115-4_content"><!-- placeholder node --></span>
@@ -212,7 +218,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <span class="clearfix grpelem placeholder" data-placeholder-for="u9149-4_content"><!-- placeholder node --></span>
          <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.facebook.com/iamlifechurchinternational" data-orig-id="u9150"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" width="8" height="8" data-orig-id="u9150_img" src="images/blank.gif?crc=4208392903"/></a>
          <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?" data-orig-id="u9152"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/youtube.png?crc=394888956" alt="" width="8" height="8" data-orig-id="u9152_img" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u9154"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=3784297162" alt="" width="54" height="14" data-orig-id="u9154_img" src="images/blank.gif?crc=4208392903"/></a>
+         <a class="nonblock nontext clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u9154"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=3999926010" alt="" width="54" height="14" data-orig-id="u9154_img" src="images/blank.gif?crc=4208392903"/></a>
          <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u9156-4_content"><!-- placeholder node --></span>
          <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u9157-4_content"><!-- placeholder node --></span>
          <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u9158-4_content"><!-- placeholder node --></span>
