--- a/testimony.html
+++ b/testimony.html
@@ -9,25 +9,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)document.location=h+(document.location.search||"")+(document.location.hash||""),document.write('<style type="text/css">body {visibility:hidden}</style>')}})("desktop","","phone/testimony.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "testimony.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://iamlifechurch.org/phone/testimony.html"/>
   <title>Testimony</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204246220"/>
-  <link rel="stylesheet" type="text/css" href="css/testimony.css?crc=3839217556" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/testimony.css?crc=165468297" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/WPqNqJDHjdQMpAF-RdNE7n1_6m6JG0LYJ_0hZlztTKqfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMS5P7rIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/MCTjVDhVTHKUav4EqLcZVz7X4XOZ0vAFg7nGADyfw7IfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMZnbn5IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -53,7 +59,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u5765"><!-- group -->
       <div class="clearfix" id="u5765_align_to_page">
        <div class="clip_frame grpelem" id="u4112"><!-- image -->
-        <img class="block" id="u4112_img" src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50"/>
+        <img class="block" id="u4112_img" src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
        </div>
        <div class="clearfix grpelem" id="u4114-4"><!-- content -->
         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
@@ -85,7 +91,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix grpelem" id="u8593-4" href="study.html"><!-- content --><p id="u8593-2"><span class="Menu-Buttons" id="u8593">STUDY</span></p></a>
     <a class="nonblock nontext clip_frame grpelem" id="u8594" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u8594_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u8596" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u8596_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u8598" href="index.html"><!-- image --><img class="block" id="u8598_img" src="images/life2.png?crc=3784297162" alt="" data-heightwidthratio="0.25" data-image-width="200" data-image-height="50"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u8598" href="index.html"><!-- image --><img class="block" id="u8598_img" src="images/life2.png?crc=3999926010" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
     <a class="nonblock nontext clearfix grpelem" id="u8600-4" href="about-us.html"><!-- content --><p id="u8600-2"><span class="Menu-Buttons" id="u8600">ABOUT US</span></p></a>
     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u8601-4" href="testimony.html"><!-- content --><p id="u8601-2"><span class="Menu-Buttons" id="u8601">TESTIMONY</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u8602-4" href="events.html"><!-- content --><p id="u8602-2"><span class="Menu-Buttons" id="u8602">EVENTS</span></p></a>
